--- a/tokamaks/main.tex
+++ b/tokamaks/main.tex
@@ -10,11 +10,22 @@
 \usepackage[T1]{fontenc}
 \pagestyle{plain}
 
+\usepackage[superscript]{cite}
+
 \usepackage{cleveref}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{hyperref}
 
+\usepackage{tocloft}
+\usepackage{tikz} 
+\usepackage{pgfplots}
+\usepackage{adjustbox}
+
+\usepackage[symbol, flushmargin, hang, perpage]{footmisc}
+\renewcommand{\thefootnote}{\fnsymbol{footnote}}
+
+\usepackage[most]{tcolorbox}
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{6pt}
 
