--- a/tokamaks/steady.tex
+++ b/tokamaks/steady.tex
@@ -95,7 +95,9 @@ As suggested, one of the most important equations in a fusion reactor is current
 
 \begin{equation}
 	\tag{\ref{eq:ibal}}
+	\tcboxmath{
 	I_P = I_{BS} + I_{CD}
+	}
 \end{equation}
 
 The goal then is to write equations for bootstrap current and driven current. This will make heavy use of the Greenwald density limit. Without spoiling too much, the steady current is shown to be only a function of temperature (i.e. independent of a tokamak's geometry and magnet strength). As will be point out then, a subtlety arises that will then bring a tokamak's configuration back into the picture -- self-consistency in the current drive efficiency ($\eta_{CD}$).
@@ -130,7 +132,9 @@ The next step is transforming the \emph{line-averaged} density ($\hat n$) into t
  
  \begin{equation}
  	\label{eq:greenwald}
+ 	\tcbhighmath{
  	\overline n = K_n \cdot \left( \frac{I_P}{R_0^2} \right)
+ 	}
  \end{equation}
  
  \begin{equation}
@@ -183,7 +187,9 @@ In standardized units, this proportionality can be written as a concrete relatio
 
 \begin{equation}
 	\label{eq:ibs}
+	\tcboxmath{
 	I_{BS} = K_{BS} \cdot \overline T
+	}
 \end{equation}
 
 \begin{equation}
