--- a/tokamaks/biblio.tex
+++ b/tokamaks/biblio.tex
@@ -4,5 +4,6 @@
 %% see section 4.3 of the LaTeX manual.
 \begin{singlespace}
 \bibliography{main}
-\bibliographystyle{plain}
+%\bibliographystyle{plain}
+\bibliographystyle{unsrt}
 \end{singlespace}
