Make things better, hopefully

--- a/tokamaks/main.bib
+++ b/tokamaks/main.bib
@@ -150,7 +150,68 @@ pages = {599},
 title = {{Introduction to electrodynamics}}
 }
 
+@misc{ehstkarney,
+abstract = {AORSA full wave calculations of helicon waves in DIII-D and ITER C. Lau et al -Survey of heating and current drive for K-DEMO D.R. Mikkelsen et al -Self-consistent modeling of CFETR baseline scenarios for steady-state operation Jiale Chen et al -This content was downloaded from IP address 18.101. ABSTRACT. A functional form is presented for the efficiency of current drive in toroidal geometry with waves at frequencies below the electron cyclotron frequency. By fitting constants in order to duplicate numerical results for the efficiency, an accurate function is obtained which will be useful for computer calculations of current drive.},
+author = {Ehst, D A and Karney, C F F},
+booktitle = {Nuclear Fusion},
+doi = {10.1088/0029-5515/31/10/011},
+file = {:Users/dan/Library/Application Support/Mendeley Desktop/Downloaded/Ehst, Karney - 2018 - Approximate formula for radiofrequency current drive efficiency with magnetic trapping LETTERS APPROXIMATE FORMULA.pdf:pdf},
+issn = {17414326},
+number = {10},
+pages = {1933--1938},
+title = {{Approximate formula for radiofrequency current drive efficiency with magnetic trapping}},
+url = {http://iopscience.iop.org/article/10.1088/0029-5515/31/10/011/pdf},
+volume = {31},
+year = {1991}
+}
+@misc{greenwald,
+abstract = {In addition to the operational limits imposed by MHD stability on plasma current and pressure, an independent limit on plasma density is observed in confined toroidal plasmas. This review attempts to summarize recent work on the phenomenology and physics of the density limit. Perhaps the most surprising result is that all of the toroidal confinement devices considered operate in similar ranges of (suitably normalized) densities. The empirical scalings derived independently for tokamaks and reversed-field pinches are essentially identical, while stellarators appear to operate at somewhat higher densities with a different scaling. Dedicated density limit experiments have not been carried out for spheromaks and field-reversed configurations, however, `optimized' discharges in these devices are also well characterized by the same empirical law. In tokamaks, where the most extensive studies have been conducted, there is strong evidence linking the limit to physics near the plasma boundary: thus, it is possible to extend the operational range for line-averaged density by operating with peaked density profiles. Additional particles in the plasma core apparently have no effect on density limit physics. While there is no widely accepted, first principles model for the density limit, research in this area has focussed on mechanisms which lead to strong edge cooling. Theoretical work has concentrated on the consequences of increased impurity radiation which may dominate power balance at high densities and low temperatures. These theories are not entirely satisfactory as they require assumptions about edge transport and make predictions for power and impurity scaling that may not be consistent with experimental results. A separate thread of research looks for the cause in collisionality enhanced turbulent transport. While there is experimental and theoretical support for this approach, understanding of the underlying mechanisms is only at a rudimentary stage and no predictive capability is yet available.},
+archivePrefix = {arXiv},
+arxivId = {arXiv:1011.1669v3},
+author = {Greenwald, Martin},
+booktitle = {Plasma Physics and Controlled Fusion},
+doi = {10.1088/0741-3335/44/8/201},
+eprint = {arXiv:1011.1669v3},
+file = {:Users/dan/Library/Application Support/Mendeley Desktop/Downloaded/Greenwald - 2002 - Density limits in toroidal plasmas.pdf:pdf},
+isbn = {0741-3335},
+issn = {07413335},
+mendeley-groups = {Confinement},
+number = {8},
+pmid = {25246403},
+title = {{Density limits in toroidal plasmas}},
+url = {https://dspace.mit.edu/bitstream/handle/1721.1/93996/01ja033{\_}full.pdf?sequence=1},
+volume = {44},
+year = {2002}
+}
 
+@article{itercd,
+abstract = {Analysis of resonant fast ion distributions during combined ICRF and NBI heating with transients using neutron emission spectroscopy C. Hellesen et al -On current drive by Ohkawa mechanism of electron cyclotron wave in large inverse aspect ratio tokamaks Pingwei Zheng et al -Applicability of inverse heat flux evaluation to thermographic measurements in SPIDER R.S. Delogu et al -This content was downloaded from IP address 18.101. Abstract. Heating and current drive systems must fulfil several roles in ITER operating scenarios: heating through the H-mode transition and to ignition; plasma burn control; current drive and current profile control in steady state scenarios; and control of MHD instabilities. They must also perform ancillary functions, such as assisting plasma start-up and wall conditioning. It is recognized that no one system can satisfy all of these requirements with the degree of flexibility that ITER will require. Four heating and current drive systems are therefore under consideration for ITER: electron cyclotron waves at a principal frequency of 170 GHz; fast waves operating in the range 40–70 MHz (ion cyclotron waves); lower hybrid waves at 5 GHz; and neutral beam injection using negative ion beam technology for operation at 1 MeV energy. It is likely that several of these systems will be employed in parallel. The systems have been chosen on the basis of the maturity of physics understanding and operating experience in current experiments and on the feasibility of applying the relevant technology to ITER. Here, the fundamental physics describing the interaction of these heating systems with the plasma is reviewed, the relevant experimental results in the exploitation of the heating and current drive capabilities of each system are discussed, key aspects of their application to ITER are outlined, and the major technological developments required in each area are summarized.},
+author = {Jacquinot, J and Jet, ) and Putvinski, S and Jct, ) and Bosia, G and {Jct )} and Fukuyama, A and Okayama, U ) and Hemsworth, R and {Cadarache )}, Cea- and Konovalov, S and {Kurchatov )}, Rrc- and Nevins, W M and {Llnl )} and Perkins, F and Rasumova, K A and Kurchatov, Rrc- ) and Romanelli, F and Frascati, Enea- ) and Tobita, K and {Jaeri )} and Ushigusa, K and Van, J W and Dam, U and {Texas )}, V and Vdovin, Rrc- and {Kurchatov )}, S and Zweben, R and Koch, Erm and Brussels, Kms- ) and W{\'{e}}growe, J.-G and Cadarache, Cea- ) and Alikaev, V V and Beaumont, B and B{\'{e}}coulet, A and Bern-Abei, S and {Pppl )} and Bhatnagar, V P and {Brussels )}, Ec- and Br{\'{e}}mond, S and Carter, M D},
+file = {:Users/dan/Library/Application Support/Mendeley Desktop/Downloaded/Jacquinot et al. - 1999 - Chapter 6 Plasma auxiliary heating and current drive.pdf:pdf},
+journal = {ITER Physics Basis Editors Nucl. Fusion},
+title = {{Chapter 6: Plasma auxiliary heating and current drive}},
+url = {http://iopscience.iop.org/article/10.1088/0029-5515/39/12/306/pdf},
+volume = {39},
+year = {1999}
+}
+
+@article{process,
+abstract = {a b s t r a c t PROCESS is a reactor systems code – it assesses the engineering and economic viability of a hypothetical fusion power station using simple models of all parts of a reactor system, from the basic plasma physics to the generation of electricity. It has been used for many years, but details of its operation have not been previously published. This paper describes some of its capabilities. PROCESS is usually used in optimisation mode, in which it finds a set of parameters that maximise (or minimise) a figure of merit chosen by the user, while being consistent with the inputs and the specified constraints. Because the user can apply all the physically relevant constraints, while allowing a large number of parameters to vary, it is in principle only necessary to run the code once to produce a self-consistent, physically plausible reactor model. The scope of PROCESS is very wide and goes well beyond reactor physics, including conversion of heat to electricity, buildings, and costs, but this paper describes only the plasma physics and magnetic field calculations. The capabilities of PROCESS in plasma physics are limited, as its main aim is to combine engineering, physics and economics. A model is described which shows the main plasma features of an inductive ITER scenario. Significant differences between the PROCESS results and the published scenario include the bootstrap current and loop voltage. The PROCESS models for these are being revised. Two new models for DEMO have been obtained. The first, DEMO A, is intended to be " conservative " in that it might be possible to build it using the technology of the near future. For example, since current drive technologies are not yet mature, only 12{\%} of the current is assumed to be due to current drive. Consequently it is a pulsed machine, able to burn for only 1.65 hours at a time. Despite the comparatively large size (major radius is 9 m), the fusion power is only 1.95 GW. The assumed gross thermal efficiency is 33{\%}, giving just 465 MW net electric power. The second, DEMO B, is intended to be " advanced " in that more optimistic assumptions are made. Comparison of DEMO A and B with a reference ITER scenario shows that current drive and bootstrap fraction need the most extrapolation from the perspective of plasma physics.},
+author = {Kovari, M and Kemp, R and Lux, H and Knight, P and Morris, J and Ward, D J},
+doi = {10.1016/j.fusengdes.2014.09.018},
+file = {:Users/dan/Library/Application Support/Mendeley Desktop/Downloaded/Kovari et al. - 2014 - {\&}quot PROCESS {\&}quot A systems code for fusion power plants—Part 1 Physics.pdf:pdf},
+isbn = {09203796},
+issn = {09203796},
+journal = {Fusion Engineering and Design},
+keywords = {Deuterium,Economics,Fusion reactor,Thermonuclear,Tritium},
+mendeley-groups = {codes},
+number = {12},
+pages = {3054--3069},
+title = {{" PROCESS " : A systems code for fusion power plants—Part 1: Physics}},
+url = {www.ccfe.ac.uk/powerplants.aspx.},
+volume = {89},
+year = {2014}
+}
 
 
 
