--- a/tokamaks/appa.tex
+++ b/tokamaks/appa.tex
@@ -1,15 +1,390 @@
-\chapter{Tables}
+\chapter{Plasma Profiles}
 
-\begin{table}
-\caption{Armadillos}
-\label{arm:table}
-\begin{center}
-\begin{tabular}{||l|l||}\hline
-Armadillos & are \\\hline
-our	   & friends \\\hline
-\end{tabular}
-\end{center}
+\begin{figure*}[h]
+    \centering
+    \hfill 
+    \begin{subfigure}[t]{0.45\textwidth}
+        \centering
+		\begin{adjustbox}{width=\textwidth}
+			\Large
+			\input{images/plasma_profiles}
+		\end{adjustbox}
+        \caption{Density and Current Profiles}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[t]{0.45\textwidth}
+        \centering
+		\begin{adjustbox}{width=\textwidth}
+			\Large
+			\input{images/temperature_profiles}
+		\end{adjustbox}
+        \caption{Temperature Profiles}
+    \end{subfigure}
+    \hfill \hfill ~\\ ~\\ ~\\
+    \caption{Radial Plasma Profiles} ~\\
+    \small The three most fundamental properties of a fusion plasma are its temperature, density, and current. These profiles allow the model to reduce from three dimensions to half of one.
+\end{figure*}
+
+\section{Density -- $n$}
+
+The Density is important to us. We use it in the Greenwald density limit, so it should be clean in both line-averaged and volume-averaged forms. Because of its flat profile, a parabola is a good approximation for H-mode pulses:
+
+\begin{equation}
+	n(\rho) = \overline{n} \cdot \left(1 + \nu_n \right) \cdot \left( 1 - \rho^2  \right)^{\nu_n}
+\end{equation}
+
+The line average density is related to $\overline{n}$ through:
+
+\begin{equation}
+	\hat{n} =  \overline{n} \cdot \left( \frac{\pi ^ { \, 1/2} }{2} \right)  \cdot \, \frac{ \Gamma( \, \nu_n + 2 \, ) }{ \Gamma( \, \nu_n + 3/2 \, ) }
+\end{equation}
+
+The convenience of this function comes from how the volumetric average comes out.
+
+To relate this to the volume integral, we use:
+
+\begin{equation}
+	\overline{x} = \frac{1}{\volume} \int x(\rho) \, d\volume
+\end{equation}
+
+For a normalized radial profile that does not depend on angle,
+
+\begin{equation}
+	\volume = \int_0^1 \rho \, d\rho = \sfrac{1}{2}
+\end{equation}
+
+Then, when $x = n$,
+
+\begin{equation}
+	\overline{n} = 2 \int_0^1 n(\rho) \rho \, d\rho = \overline{n}
+\end{equation}
+
+Additionally, the Greenwald Density limit that we will use throughout,
+\begin{equation}
+	\hat{n} = N_G \cdot \left( \frac{I_M}{\pi a^2} \right) 
+\end{equation} 
+
+can now be written in the following form:
+\begin{equation}
+	\overline{n} =K_{n} \cdot \left( \frac{I_M}{R_0^{\,2}} \right)
+\end{equation} 
+\begin{equation}
+	K_n = \frac{2 \, N_G}{\epsilon^2 \pi ^ { \, 3/2} }\cdot \left( \frac{ \Gamma( \, \nu_n + 3/2 \, ) }{ \Gamma( \, \nu_n + 2 \, ) } \right)
+\end{equation}
+
+\section{Temperature -- $T$}
+
+The Temperature is the swept variable in our model framework. Therefore, it's the one we can allow people to be the most cavalier with. Additionally, as temperature profiles are highly peaked, their pedestal region is sometimes wrongfully neglected with a parabola.
+
+\begin{equation}
+	T(\rho) = \overline{T} \cdot \left(1 + \nu_T \right) \cdot \left( 1 - \rho^2  \right)^{\nu_T}
+\end{equation}
+
+Therefore, our model sometimes treats the system as if it had a pedestal region. This is mainly for the bootstrap current and fusion power, which were previously known to misalign and overshoot, respectively.
+\begin{equation}
+	\tcboxmath{
+	T(\rho) = 
+	\begin{cases}
+	    T_{para} \ , & x \in [0, \rho_{ped} ] \\
+	    T_{line}   \ , & x \in ( \rho_{ped}, 1 ]
+	\end{cases}
+	}	
+\end{equation}
+
+Where the piecewise functions are given by,
+\begin{equation}
+	T_{para} = T_{ped} + ( T_{0} - T_{ped} ) \cdot \left( 1 - \left( \frac{\rho}{\rho_{ped}} \right)^{\lambda_T} \right)^{\nu_T}
+\end{equation}
+\begin{equation}
+	T_{line} = T_{sep} + ( T_{ped} - T_{sep} ) \cdot \left( \frac{ 1 - \rho }{ 1 - \rho_{ped} } \right)
+\end{equation}
+
+This temperature profile is related to the volume-averaged temperature through,
+
+\begin{equation}
+	\overline{T} \cdot \volume = \int_0^{\rho_{ped}} T_{para}(\rho) \, \rho \, d\rho + \int_{\rho_{ped}}^1 T_{line}(\rho) \, \rho \, d\rho
+\end{equation}
+
+Starting with the second integral,
+
+\begin{equation}
+	\int_{\rho_{ped}}^1 T_{line}(\rho) \, \rho \, d\rho = \frac{1}{3} \cdot ( 1 - \rho_{ped} ) \cdot \left( \left( T_{sep} + \sfrac{ T_{ped} }{2} \right) + \rho_{ped} \cdot \left( T_{ped} + \sfrac{ T_{sep} }{2}  \right)  \right)
+\end{equation}
+
+The first integral can be handled by breaking it into to,
+\begin{multline}
+	\int_0^{\rho_{ped}} T_{para}(\rho) \, \rho \, d\rho = T_{ped} \cdot \int_0^{\rho_{ped}} \rho \, d\rho \ + \\ ( T_{0} - T_{ped} ) \cdot \int_0^{\rho_{ped}} \left( 1 - \left( \frac{\rho}{\rho_{ped}} \right)^{\lambda_T} \right)^{\nu_T}  \cdot \rho \, d\rho \ \ \  \
+\end{multline}
+
+The first sub-integral is then,
+\begin{equation}
+	T_{ped} \cdot \int_0^{\rho_{ped}} \rho \, d\rho = \frac{ T_{ped} \, \rho_{ped}^{\,2} }{2}
+\end{equation}
+
+Utilizing the following transformation,
+\begin{equation}
+	u = \frac{\rho}{\rho_{ped}}
+\end{equation}
+\begin{equation}
+	d\rho = \rho_{ped} \, du
+\end{equation}
+\begin{equation}
+	u( \rho=\rho_{ped} ) = 1
+\end{equation}
+
+The second sub-integral becomes (assuming independence from $T_0$ and $T_{ped}$),
+\begin{equation}
+	( T_{0} - T_{ped} ) \cdot \rho_{ped}^2 \cdot \int_0^{1} \left( 1 - u^{\,\lambda_T} \right)^{\nu_T}  \cdot u \, du
+\end{equation}
+
+Where:
+\begin{equation}
+	\int_0^{1} \left( 1 - u^{\,\lambda_T} \right)^{\nu_T}  \cdot u \, du =  \frac{ \Gamma \left( 1 + \nu_T  \right) \Gamma \left( \frac{2}{\lambda_T} \right) }{ \lambda_T \cdot \Gamma \left( 1 + \nu_T + \frac{2}{\lambda_T} \right) }
+\end{equation}
+
+We are now in a position to solve for $T_0$ in terms of $\overline{T}$:
+\begin{equation}
+	\tcboxmath{
+	T_0 = T_{ped} + \frac{ \overline{T} - K_{TU} }{K_{TD}} }
+\end{equation}
+\begin{equation}
+	K_{TU}  =  T_{ped} \, \rho_{ped}^{\,2}  \ +  \frac{ \left( 1 - \rho_{ped} \right ) }{3} \cdot \left( \left( 2 T_{sep} + T_{ped} \right) + \rho_{ped} \cdot \left( 2 T_{ped} + T_{sep}   \right)  \right) 
+\end{equation}
+\begin{equation}
+	K_{TD} = \rho_{ped}^2 \cdot \left( \frac{ 2 }{ \lambda_T } \right) \, \cdot \frac{ \Gamma \left( 1 + \nu_T  \right) \Gamma \left( \frac{2}{\lambda_T} \right) }{ \Gamma \left( 1 + \nu_T + \frac{2}{\lambda_T} \right) }
+\end{equation}
+
+Which although not pretty, can be plugged into the original equation.
+
+\section{Pressure -- $p$}
+
+The first point to make is that we are not using the same temperature profile for the pressure as for the temperature. This is because it would lead to hypergeometric functions that are not worth the headache.
+
+As most of the pressure is at the center, we use simple parabolic profile. This leads to:
+
+\begin{equation}
+	\overline{p} = 0.1581 \, ( 1 + f_D ) \, \frac{ (1 + \nu_n) \, (1 + \nu_T) }{1 + \nu_n + \nu_T } \, \overline{n} \, \overline{T} \ \ [atm]
+\end{equation}
+
+\section{Bootstrap Current -- $f_{BS}$}
+
+We start with,
+
+\begin{equation}
+	f_{BS} = \frac{I_{BS}}{I_P} = \frac{ 2 \pi a^2 \kappa }{I_P} \int_0^1 J_B \, \rho \, d\rho
+\end{equation}
+
+Expanding the previous equation using the following relations,
+\begin{equation}
+	J_B = -4.85 \cdot R_0 \epsilon^{1/2} \cdot \left( \frac{ \rho^{1/2} n T }{ \sfrac{ \textnormal{d}\psi }{ \textnormal{d}\rho } } \right) \cdot \left( \frac{ \sfrac{ \textnormal{d}n }{ \textnormal{d}\rho } }{ n } + 0.54 \cdot \frac{ \sfrac{ \textnormal{d}T }{ \textnormal{d}\rho } }{ T } \right)
+\end{equation}
+\begin{equation}
+	\frac{ \textnormal{d}\psi }{ \textnormal{d}\rho } = \frac{ \mu_0 R_0 I_P }{ \pi } \cdot \left( \frac{ \kappa}{1+\kappa^2} \right) \cdot b_p(\rho)
+\end{equation}
+
+Yields:
+\begin{equation}
+	f_{BS} = -K_{BS} \int_0^1 \left( 1 - \rho^2  \right)^{\nu_n} \cdot \left( \frac{ \rho^{3/2} }{ b_p(\rho) } \right) \cdot \left( \frac{T}{ n } \cdot  \frac{ \textnormal{d}n }{ \textnormal{d}\rho } + 0.54 \cdot  \frac{ \textnormal{d}T }{ \textnormal{d}\rho }  \right)
+ \, d\rho
+\end{equation}
+\begin{equation}
+	K_{BS} = K_n \cdot \left( \frac{ 2 \pi^2 \cdot 4.85 \cdot \epsilon^{5/2} }{\mu_0} \right) \cdot ( 1 + \nu_n ) \cdot ( 1 + \kappa^2 )
+\end{equation}
+
+Here, $b_p$ comes from:
+\begin{equation}
+	b_p(\rho) = \frac{ -e^{\gamma\rho^2} ( \gamma\rho^2 - 1 - \gamma ) - 1 - \gamma }{\rho \,( e^\gamma - 1 - \gamma ) }
+\end{equation}
+
+And the value of $\gamma$ comes from the the normalized internal inductance:
+
+\begin{equation}
+	l_i = \frac{4 \kappa}{1+\kappa^2}	 \int_0^1 b_p^2 \ \frac{d\rho}{\rho}
+\end{equation}
+
+With our profiles,
+\begin{equation}
+	-\left( \frac{T}{n} \cdot \frac{ \textnormal{d}n }{ \textnormal{d}\rho } \right) = 2 \nu_n \cdot \left( \frac{ T \cdot \rho }{ 1 - \rho^2 } \right)
+\end{equation}
+
+While treating temperature differently results in,
+\begin{equation}
+	-\left( \frac{ \textnormal{d}T }{ \textnormal{d}\rho } \right)_{para} =  \left( \frac{ T_0 - T_{ped} }{ \rho_{ped}^{ \, \lambda_T} } \right) \cdot ( \nu_T \lambda_T ) \cdot \rho^{\,\lambda_T-1} \cdot \left( 1 - \left( \frac{\rho}{\rho_{ped}} \right)^{\lambda_T} \right)^{\nu_T-1}
+\end{equation}
+\begin{equation}
+	-\left( \frac{ \textnormal{d}T }{ \textnormal{d}\rho } \right)_{line} =  \left( \frac{ T_{ped} - T_{sep} }{1 - \rho_{ped} } \right) 
+\end{equation}
+
+Where we will be using the new symbol definition,
+\begin{equation}
+	\partial{T} = -\left( \frac{ \textnormal{d}T }{ \textnormal{d}\rho } \right)
+\end{equation}
+
+Which ultimately allows us to write,
+\begin{empheq}[box=\tcbhighmath]{gather}
+	f_{BS} = K_{BS} \int_0^1 H_{BS} \, d\rho \\
+	H_{BS} = \left( 1 - \rho^2  \right)^{\nu_n-1} \cdot \left( \frac{ \rho^{3/2} }{ b_p(\rho) } \right) \cdot \bigg( 2 \nu_n \cdot \rho \cdot T + 0.54 \cdot \left( 1 - \rho^2 \right) \cdot \partial{T}   \bigg)
+\end{empheq}
+
+Where the values of $T$ are determined through,
+\begin{equation}
+	T_{para} = T_{ped} + ( T_{0} - T_{ped} ) \cdot \left( 1 - \left( \frac{\rho}{\rho_{ped}} \right)^{\lambda_T} \right)^{\nu_T}
+\end{equation}
+\begin{equation}
+	T_{line} = T_{sep} + ( T_{ped} - T_{sep} ) \cdot \left( \frac{ 1 - \rho }{ 1 - \rho_{ped} } \right)
+\end{equation}
+
+And the values of $\partial{T}$ are:
+\begin{equation}
+	\partial{T}_{para} =  \left( \frac{ T_0 - T_{ped} }{ \rho_{ped}^{ \, \lambda_T} } \right) \cdot ( \nu_T \lambda_T ) \cdot \rho^{\,\lambda_T-1} \cdot \left( 1 - \left( \frac{\rho}{\rho_{ped}} \right)^{\lambda_T} \right)^{\nu_T-1}
+\end{equation}
+\begin{equation}
+	\partial{T}_{line} =  \left( \frac{ T_{ped} - T_{sep} }{1 - \rho_{ped} } \right) 
+\end{equation}
+
+\section{Reactivity -- $(\sigma v)$}
+
+When discussing reactivity, the place to start is talking about fusion power,
+\begin{equation}
+	P_F = \int E_F \, n_D \, n_T \, \langle \sigma v \rangle \, d \textbf{r}
+\end{equation}
+
+For the tokamak geometry given, volume integrals can be reduced to 0-D forms. 
+
+An arbitrary $F(\rho)$ has that:
+\begin{equation}
+	F_V = 4 \, \pi ^2 \, R_0 \, a^2 \kappa \, g \int\limits_0^1 F(\rho) \rho d\rho
+\end{equation}
+
+Given that $E_F = 17.6$ MeV and,
+\begin{equation}
+	n_D = n_T = f_D \frac {n_e}{2} = \frac{f_D}{2} \cdot \, \left( \ \overline{n} \, ( 1 + \nu_n ) \, ( 1 - \rho^2 ) ^ {\, \nu_n} \, \right) 
+\end{equation}
+
+Fusion power can be expressed as,
+\begin{equation}
+	P_F = K_F \cdot ( \, \overline{n}^2 \, R_0^3 \, ) \cdot (\sigma v) \ \ \ [MW]
+\end{equation}
+\begin{equation}
+	 (\sigma v) = 10^{21} \, (1+\nu_n)^2 \int\limits_0^1 ( 1 - \rho^2 ) ^ { \, 2 \nu_n} \langle \sigma v \rangle \, \rho \, d\rho
+\end{equation}
+\begin{equation}
+	K_F = 278.3 \, ( f_D^2 \, \epsilon^2 \kappa \, g )
+\end{equation}
+
+The Bosch-Hale parametrization of the volumetric reaction rates is then given by,
+\begin{equation}
+	\tcboxmath{
+	\langle \sigma v \rangle = C_1 \cdot \theta \cdot \textnormal{exp}(-3 \xi) \cdot \sqrt{ \frac{\xi  }{m_\mu  c^2 T^3} }  \ \ \, [ \, \sfrac{ \textnormal{m}^3 }{ \textnormal{s} } \, ] }
+\end{equation}
+\begin{equation} 
+	\theta = T \cdot \left(1-\frac{T(C_2+T(C_4+TC_6))}{1+T(C_3+T(C_5+TC_7))}\right) ^{-1}
+\end{equation}
+\begin{equation}
+	\xi = \left(\frac{B_G^2}{4\theta}\right)^{1/3}
+\end{equation}
+
+Where approximate DT volumetric reaction rate ($10\lesssim~T~\mathrm{[keV]}\lesssim20$)
+\begin{equation}
+		\langle\sigma v\rangle_\mathrm{DT} = 1.1\times10^{-24} \cdot  \, T^2   \ \ \ [ \, \sfrac{ \textnormal{m}^3 }{ \textnormal{s} } \, ]
+\end{equation}
+
+In our model, each appearance of T is set to the pedestal profile defined earlier.
+
+\begin{table}[h!]\small
+  \noindent
+  \centering
+  \begin{tabular}{c | c c | c | c}
+    \multicolumn{5}{c}{Bosch-Hale parametrization coefficients for volumetric reaction rates}\\
+    \hline
+    & $^2$H(d,n)$^3$He & $^2$H(d,p)$^3$H & $^3H$(d,n)$^4$He & $^3$He(d,p)$^4$He\\
+    \hline\hline
+    B$_G$ [keV$^{1/2}$] & 31.3970 & 31.3970 & 34.3827   & 68.7508 \\
+    $m_\mu c^2$ [keV]   & 937 814 & 937 814 & 1 124 656 & 1 124 572 \\
+    \hline
+            % 2H(d,n)                    % 2H(d,p)                   % 3H(d,n)                    % 3He(d,p)
+    C$_1$& 5.43360$\times$10$^{-12}$  & 5.65718$\times$10$^{-12}$ & 1.17302$\times$10$^{-9}$  & 5.51036$\times$10$^{-10}$ \\ 
+    C$_2$  & 5.85778$\times$10$^{-3}$   & 3.41267$\times$10$^{-3}$  & 1.51361$\times$10$^{-2}$  & 6.41918$\times$10$^{-3}$ \\
+    C$_3$  & 7.68222$\times$10$^{-3}$   & 1.99167$\times$10$^{-3}$  & 7.51886$\times$10$^{-2}$  & -2.02896$\times$10$^{-3}$ \\
+    C$_4$  & 0.0                        & 0.0                       & 4.60643$\times$10$^{-3}$  & -1.91080$\times$10$^{-5}$ \\
+    C$_5$  & -2.96400$\times$10$^{-6}$  & 1.05060$\times$10$^{-5}$  & 1.35000$\times$10$^{-2}$  & 1.35776$\times$10$^{-4}$ \\
+    C$_6$  & 0.0                        & 0.0                       & -1.06750$\times$10$^{-4}$ & 0.0 \\
+    C$_7$& 0.0                      & 0.0                       & 1.36600$\times$10$^{-5}$  & 0.0 \\
+    \hline
+    Valid range (keV) & 0.2$<$T$_i<$100 & 0.2$<$T$_i<$100 & 0.2$<$T$_i<$100 & 0.5$<$T$_i<$190\\
+    \hline
+  \end{tabular}
+  \label{table:rrParam}
 \end{table}
+
+\begin{table}[h!]\small
+  \noindent
+  \centering
+  \begin{tabular}{c | c c | c | c}
+    \multicolumn{5}{c}{Tabulated Bosch-Hale reaction rates [m$^3$~s$^{-1}$]}\\
+    \hline
+    T (keV) & $^2$H(d,n)$^3$He & $^2$H(d,p)$^3$H & $^3H$(d,n)$^4$He & $^3$He(d,p)$^4$He\\
+    \hline\hline
+    1.0& 9.933$\times$10$^{-29}$ & 1.017$\times$10$^{-28}$ & 6.857$\times$10$^{-27}$ & 3.057$\times$10$^{-32}$ \\
+    1.5  & 8.284$\times$10$^{-28}$ & 8.431$\times$10$^{-28}$ & 6.923$\times$10$^{-26}$ & 1.317$\times$10$^{-30}$ \\
+    2.0  & 3.110$\times$10$^{-27}$ & 3.150$\times$10$^{-27}$ & 2.977$\times$10$^{-25}$ & 1.399$\times$10$^{-29}$ \\
+    3.0  & 1.602$\times$10$^{-26}$ & 1.608$\times$10$^{-26}$ & 1.867$\times$10$^{-24}$ & 2.676$\times$10$^{-28}$ \\
+    4.0  & 4.447$\times$10$^{-26}$ & 4.428$\times$10$^{-26}$ & 5.974$\times$10$^{-24}$ & 1.710$\times$10$^{-27}$ \\
+    5.0  & 9.128$\times$10$^{-26}$ & 9.024$\times$10$^{-26}$ & 1.366$\times$10$^{-23}$ & 6.377$\times$10$^{-27}$ \\
+    8.0  & 3.457$\times$10$^{-25}$ & 3.354$\times$10$^{-25}$ & 6.222$\times$10$^{-23}$ & 7.504$\times$10$^{-26}$ \\
+   10.0  & 6.023$\times$10$^{-25}$ & 5.781$\times$10$^{-25}$ & 1.136$\times$10$^{-22}$ & 2.126$\times$10$^{-25}$ \\
+   12.0  & 9.175$\times$10$^{-25}$ & 8.723$\times$10$^{-25}$ & 1.747$\times$10$^{-22}$ & 4.715$\times$10$^{-25}$ \\
+   15.0  & 1.481$\times$10$^{-24}$ & 1.390$\times$10$^{-24}$ & 2.740$\times$10$^{-22}$ & 1.175$\times$10$^{-24}$ \\
+   20.0& 2.603$\times$10$^{-24}$ & 2.399$\times$10$^{-24}$ & 4.330$\times$10$^{-22}$ & 3.482$\times$10$^{-24}$ \\
+   \hline
+  \end{tabular}
+  \label{table:rr}
+\end{table}
+
+\section{Volume Averaged Powers}
+
+The first thing to consider in a fusion reactor is power balance. \\ \\ It is what separates a profitable device from a toaster. It's given by:
+
+\label{pwr_bal}
+\begin{equation}
+\tcboxmath{
+P_\alpha + P_H = P_\kappa + P_B }
+\end{equation}
+\begin{equation}
+	P_\alpha = \frac{P_F}{5}
+\end{equation}
+\begin{equation}
+	P_H = \frac{P_F}{Q}
+\end{equation}
+\begin{equation}
+	P_\kappa = \frac{3}{2 \, \tau_E} \int p \, d\textbf{r} \ \ \ \ [ \, 3D \, ]
+\end{equation}
+\begin{equation}
+	P_B = 5.35e3 \, Z_{eff} \int n_{\overline{n}}^2 \, \sqrt{T} \, d\textbf{r} \ \ \ \ [ \, 3D \, ]
+\end{equation}
+
+As mentioned before, $P_F$ is handled by $(\sigma v)$ and therefore the lefthand-side uses the pedestal temperature profiles. However, for the same reasons as discussed earlier, the righthand-side ($P_\kappa$ and $P_B$) need to use the parabolic temperature profiles.
+
+Using the parabolic profiles (for $n$ and $T$) gives for the Bremsstrahlung radiation,
+\begin{equation}
+	P_B = K_B \cdot \left( R_0^3 \ \overline{n}^2 \, \sqrt{\,\overline{T}} \ \right) \ \ [MW]
+\end{equation}
+\begin{equation}
+	K_B = 0.1056 \cdot Z_{eff} \cdot ( \, \epsilon^2 \, \kappa \, g \, ) \cdot \frac{ (1+\nu_n)^2 \, (1+\nu_T)^{1/2} }{1+2 \, \nu_n + 0.5 \, \nu_T}
+\end{equation}
+
+And a similar exercise for the thermal conduction losses results in:
+\begin{equation}
+	P_\kappa = K_\kappa \cdot \left( \frac{ R_0 ^ 3 \ \overline{n}  \, \overline{T} }{\tau_E} \right) \ \ [MW]
+\end{equation}
+\begin{equation}
+	K_\kappa = 0.4744 \cdot  ( 1 + f_D ) \cdot ( \, \epsilon^2 \, \kappa \, g \, ) \cdot \frac{ (1 + \nu_n) \, (1 + \nu_T) }{1 + \nu_n + \nu_T }
+\end{equation}
 
 \clearpage
 \newpage
+
+
+
+
+
